changed java version from 25 to 21